# python-app-simple

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/: __main__.py
