[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.pkg_name }}/*"]
exclude = ["tests/*"]

[project]
name = "{{ cookiecutter.pkg_name }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "BSD 3-Clause License"}
version = "0.0.1"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "ipdb"
]

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.pkg_name }}.__main__:main"
